--- a/sportbot-api/package.json
+++ b/sportbot-api/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@google-cloud/dialogflow": "^3.3.0",
     "actions-on-google": "^2.13.0",
+    "cors": "^2.8.5",
     "dialogflow-fulfillment": "^0.6.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
