--- a/sportbot-api/package.json
+++ b/sportbot-api/package.json
@@ -13,10 +13,12 @@
   "dependencies": {
     "@google-cloud/dialogflow": "^3.3.0",
     "actions-on-google": "^2.13.0",
+    "axios": "^0.21.1",
     "cors": "^2.8.5",
     "dialogflow-fulfillment": "^0.6.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mongoose": "^5.12.4",
     "uuid": "^8.3.2"
   }
 }
