--- a/sportbot-web/package.json
+++ b/sportbot-web/package.json
@@ -20,7 +20,7 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
-    "@nebular/eva-icons": "6.2.2",
+    "@nebular/eva-icons": "^6.2.2",
     "@nebular/theme": "^6.2.2",
     "eva-icons": "^1.1.3",
     "rxjs": "~6.4.0",
