--- a/sportbot-web/package.json
+++ b/sportbot-web/package.json
@@ -2,19 +2,28 @@
   "name": "web-sportbot",
   "version": "0.0.0",
   "scripts": {
+    "heroku-postbuild": "ng build",
     "ng": "ng",
-    "start": "ng serve",
+    "dev": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
+  "engines": {
+    "node": "12.19.0",
+    "npm": "6.14.8"
+  },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "~0.803.19",
     "@angular/animations": "~8.2.14",
     "@angular/cdk": "^10.2.1",
+    "@angular/cli": "~8.3.19",
     "@angular/common": "~8.2.14",
     "@angular/compiler": "~8.2.14",
+    "@angular/compiler-cli": "~8.2.14",
     "@angular/core": "~8.2.14",
     "@angular/forms": "~8.2.14",
     "@angular/platform-browser": "~8.2.14",
@@ -23,14 +32,15 @@
     "@nebular/eva-icons": "^6.2.2",
     "@nebular/theme": "^6.2.2",
     "eva-icons": "^1.1.3",
+    "express": "^4.17.1",
+    "path": "^0.12.7",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
+    "typescript": "~3.5.3",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.19",
-    "@angular/cli": "~8.3.19",
-    "@angular/compiler-cli": "~8.2.14",
     "@angular/language-service": "~8.2.14",
     "@schematics/angular": "~8.3.19",
     "@types/jasmine": "~3.3.8",
